cmake_minimum_required(VERSION 3.16)
project(algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(algorithm main.cpp "685. 冗余连接 II.cpp" "796. 旋转字符串.cpp" "808. 分汤.cpp" UVa221.cpp "851. 喧闹和富有.cpp" "113. 路径总和 II.cpp" Solution.cpp "5526. 最多可达成的换楼请求数目.cpp" 山谷序列.cpp "771. 宝石与石头.cpp" "1528. 重新排列字符串.cpp" "1. 两数之和 .cpp" "1436. 旅行终点站 .cpp" "834. 树中距离之和.cpp" "75. 颜色分类 .cpp" "461. 汉明距离 .cpp" "1021. 删除最外层的括号 .cpp" "1299. 将每个元素替换为右侧最大元素.cpp" "938. 二叉搜索树的范围和 .cpp" "剑指 Offer 05. 替换空格 .cpp" "804. 唯一摩尔斯密码词 .cpp" "832. 翻转图像 .cpp" "1252. 奇数值单元格的数目 .cpp" "1309. 解码字母到整数映射 .cpp" "141. 环形链表.cpp" "剑指 Offer 58 - II. 左旋转字符串.cpp" "1464. 数组中两元素的最大乘积.cpp" "1323. 6 和 9 组成的最大数字.cpp")